<resources>
    <string name="app_name">Geonotas</string>
    <string name="txt_login">Login</string>
    <string name="et_login">Apelido</string>
    <string name="et_senha">Senha</string>
    <string name="btn_login">Logar</string>
    <string name="txt_to_singup"><u>Não possui um login? Crie agora!</u></string>
    <string name="et_singup_name">Nome</string>
    <string name="et_singup_surname">Sobrenome</string>
    <string name="et_singup_nick">Apelido</string>
    <string name="et_singup_mail">E-mail</string>
    <string name="et_singup_pass">Senha</string>
    <string name="et_singup_confirm_pass">Confirme a senha</string>
    <string name="txt_singup_select_text">Selecione uma imagem de perfil: </string>
    <string name="btn_singup_select_image"> Selecionar... </string>
    <string name="btn_singup_ok"> Finalizar </string>
    <string name="title_activity_main">Geonotas</string>
    <string name="menu_master_my_notes">Minhas notas</string>
    <string name="menu_master_marked_notes">Notas marcadas</string>
    <string name="menu_master_map">Mapa</string>
    <string name="menu_master_preferences">Preferências</string>
    <string name="menu_master_logout">Sair</string>


    <string name="et_editcreate_note_message">Escreva sua mensagem aqui...</string>
    <string name="txt_editcreate_note_visibility">Visibilidade</string>
    <string name="btn_editcreate_note_editcreate">Criar nota</string>

    <string name="title_activity_maps">Map</string>
    <string name="txt_note_comments_title">Comentários</string>
    <string name="hint_note_comment">Escreva um comentário</string>
    <string name="txt_note_comments_point">" • "</string>
    <string name="str_note_activity_title">Nota</string>
    <string name="btn_note_comments_send">Enviar</string>
    <string name="str_note_activity_empty_message">Escreva algo</string>
    <string name="str_main_activity_title_main">Geonotas</string>
    <string name="str_main_activity_title_mynotes">Minhas notas</string>
    <string name="str_main_activity_title_marked">Notas de quem sigo</string>
    <string name="str_main_activity_title_addnote">Nova nota</string>
    <string name="str_editcreate_activity_finalize">Concluir</string>
    <string name="title_activity_map">Map</string>
    <string name="str_map_activity_title">Mapa</string>
    <string name="txt_singup_image_size">Tamanho recomendado: 256 x 256 px</string>
    <string name="str_invalid_image_err">Selecione uma imagem válida</string>
    <string name="str_name_image_err">A imagem aparenta ter o nome errado</string>
    <string name="str_incomplete_fields_err">Preencha todos os campos</string>
    <string name="str_equal_pass_err">As senhas precisam ser iguais</string>
    <string name="txt_profile_friends">Seguindo</string>
    <string name="ac_profile_addfriends">Digite um apelido para adicionar</string>
    <string name="menu_master_profile">Perfil</string>
    <string name="str_profile_notfriends">Você não segue ninguém :(</string>
    <string name="str_profile_followers">Seguidores</string>
    <string name="str_teclado">Teclado</string>
    <string name="rad_editcreate_note_visibility_all">Para todos</string>
    <string name="rad_editcreate_note_visibility_followers">Apenas seguidores</string>
    <string name="rad_editcreate_note_visibility_friends">Apenas amigos</string>
    <string name="global_request_permission_loc">Precisamos da sua localização</string>
</resources>