<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingTop="10dp"
    android:paddingEnd="5dp"
    tools:context=".views.SingupActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_singup_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_singup_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_singup_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_singup_surname"
                android:inputType="textPersonName" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_singup_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_singup_nick"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_singup_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_singup_mail"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_singup_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_singup_pass"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_singup_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_singup_confirm_pass"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_singup_select_text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_singup_select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_singup_select_image" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_singup_image_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background" />

            <br.ufc.geonotas.myPalette.Icon
                android:id="@+id/icn_singup_avatar"
                android:layout_width="@dimen/avatar_size_note"
                android:layout_height="@dimen/avatar_size_note"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_margin="50dp"
                app:srcCompat="@drawable/ic_account_box_24px" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_singup_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/btn_singup_ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>