<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NoteActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/iv_note_avatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_size_note"
                app:srcCompat="@drawable/ic_account_box_24px" />

            <TextView
                android:id="@+id/txt_note_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/design_default_color_primary_variant"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_note_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <View
                android:layout_width="@dimen/view_bar_width"
                android:layout_height="@dimen/view_bar_height"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/txt_note_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/note_margin_message"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_note_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/note_margin_locale"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_note_comments_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <br.ufc.geonotas.myPalette.Icon
                    android:id="@+id/icn_note_comment_avatar"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_width"
                    app:srcCompat="@drawable/ic_account_box_24px" />

                <EditText
                    android:id="@+id/et_note_comment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_note_comment"
                    android:inputType="textMultiLine"
                    android:maxLength="@integer/comment_max_length" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_note_send_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:text="@string/btn_note_comments_send" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_note_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>