<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/avatar_margin"
    tools:context=".views.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_profile_avatar"
                    android:layout_width="@dimen/avatar_size_note"
                    android:layout_height="@dimen/avatar_size_note"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_account_box_24px" />

                <TextView
                    android:id="@+id/txt_profile_nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_profile_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="@dimen/view_bar_width"
                    android:layout_height="@dimen/view_bar_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/txt_profile_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_profile_friends"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_profile_friends"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:minHeight="100dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/txt_profile_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/str_profile_followers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_profile_followers"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:minHeight="100dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <AutoCompleteTextView
                android:id="@+id/ac_profile_addfriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ac_profile_addfriends" />

            <ImageButton
                android:id="@+id/ib_profile_addfriends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:tint="@color/design_default_color_primary"
                app:srcCompat="@drawable/ic_add_black_18dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>